--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ramito de Flores Amarillas</title>
+    <title>Ramito</title>
     <style>
         body {
             font-family: 'Georgia', serif;
@@ -236,4 +236,5 @@
         }, 1000);
     </script>
 </body>
+
 </html>
